[build-system]
requires = ["setuptools>=41.0", "urllib3>=1.26.8", "typing-extensions>=3.10.0.2", "pandas>=1.3.5", "haversine==2.7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pgeodistance"
version = "0.2.0"
authors = [
  { name="Sparkle", email="sparklethinker@gmail.com" },
]
description = "Compute global postal code geo distance"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
"Homepage" = "https://github.com/sparkle-apt/pgeodistance"
"Bug Tracker" = "https://github.com/sparkle-apt/pgeodistance/issues"